--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27"
   },
