--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "resize-observer-polyfill": "1.5.1",
+    "styled-components": "4.2.0"
   },
   "scripts": {
     "start": "react-scripts start start",
