Created firebase and fixed projects style

--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.1.5",
+    "axios": "^0.19.2",
+    "firebase": "^7.15.5",
+    "lodash-es": "4.17.11",
+    "lodash-move": "1.1.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "react-with-gesture": "4.0.0",
     "resize-observer-polyfill": "1.5.1",
     "styled-components": "4.2.0",
-    "lodash-es": "4.17.11",
-    "lodash-move": "1.1.1",
-    "react-with-gesture": "4.0.0",
     "vec-la": "1.5.0"
   },
   "scripts": {
