--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "antd": "^4.1.5",
     "axios": "^0.19.2",
     "firebase": "^7.15.5",
-    "lodash-es": "4.17.11",
-    "lodash-move": "1.1.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -23,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.15",
     "react-with-gesture": "4.0.0",
     "resize-observer-polyfill": "1.5.1",
     "styled-components": "4.2.0",
