--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.1.5",
     "axios": "^0.19.2",
+    "emailjs-com": "^2.4.1",
     "firebase": "^7.15.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
