--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bruno-portfolio",
+  "homepage": "http://bruno-dasilva.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,10 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.1.5",
-    "axios": "^0.19.2",
     "emailjs-com": "^2.4.1",
-    "firebase": "^7.15.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
