--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "vec-la": "1.5.0"
   },
   "scripts": {
-    "start": "react-scripts start start",
-    "build": "react-scripts start build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts start test",
     "eject": "react-scripts eject"
   },
